# yandex_contest_invoker_compat_jni

./: CMakeLists.txt  jni_gen.sh  jni_validate.sh
include/yandex/contest/invoker/compat/jni/: CXXClass.hpp  Collection.hpp  Context.hpp  CxxClass.hpp  Enum.hpp  Error.hpp  FunctionHelper.hpp  GlobalRef.hpp  HandleHelper.hpp  JClass.hpp  JClass.tcc  LocalRef.hpp  NotNull.hpp  Primitive.hpp  String.hpp
include/yandex/contest/invoker/compat/jni/config/: Error.hpp  InputArchive.hpp  TypeTraits.hpp  load.hpp
include/yandex/contest/invoker/compat/jni/impl/: ContainerConfig.hpp  ControlProcessConfig.hpp  FDAlias.hpp  FdAlias.hpp  File.hpp  Filesystem.hpp  NotificationStream.hpp  Pipe.hpp  Process.hpp  ProcessDefaultSettings.hpp  ProcessGroup.hpp  Stream.hpp
include/yandex/contest/invoker/compat/jni/impl/filesystem/: Config.hpp  Device.hpp  Directory.hpp  FIFO.hpp  Fifo.hpp  RegularFile.hpp  SymLink.hpp
include/yandex/contest/invoker/compat/jni/impl/lxc/: Config.hpp  MountConfig.hpp  RootfsConfig.hpp
include/yandex/contest/invoker/compat/jni/impl/process/: DefaultSettings.hpp  ResourceLimits.hpp  ResourceUsage.hpp  Result.hpp
include/yandex/contest/invoker/compat/jni/impl/process_group/: DefaultSettings.hpp  ResourceLimits.hpp  ResourceUsage.hpp  Result.hpp
include/yandex/contest/invoker/compat/jni/impl/unistd/: FileStatus.hpp  MountEntry.hpp
include/yandex/contest/invoker/compat/jni/impl/unistd/access/: Id.hpp
include/yandex/contest/invoker/compat/jni/mpl/: string.hpp
include/yandex/contest/invoker/compat/jni/traits/: jinfo.hpp
java/: pom.xml
java/src/main/java/com/yandex/contest/invoker/: IContainer.java  IContainerConfig.java  IControlProcessConfig.java  IFDAlias.java  IFdAlias.java  IFile.java  IFilesystem.java  ILog.java  INonPipeStream.java  INotificationStream.java  IPipe.java  IProcess.java  IProcessGroup.java  IProcessSettings.java  IStream.java  InvokerException.java  NotificationStreamProtocol.java  Signal.java
java/src/main/java/com/yandex/contest/invoker/filesystem/: ICreateFile.java  IDevice.java  IDirectory.java  IFIFO.java  IFifo.java  IFile.java  IFilesystemConfig.java  IRegularFile.java  ISymLink.java
java/src/main/java/com/yandex/contest/invoker/impl/: Container.java  ContainerConfig.java  ContainerConfigTest.java  ContainerFixture.java  ControlProcessConfig.java  FDAlias.java  FdAlias.java  File.java  Filesystem.java  IHandle.java  InvokerFixture.java  Log.java  LogTest.java  NotificationStream.java  PackageInit.java  Pipe.java  Process.java  ProcessGroup.java  ProcessGroupFixture.java  ProcessGroupTest.java  ProcessTest.java  Stream.java
java/src/main/java/com/yandex/contest/invoker/jimpl/: AbstractFDAlias.java  AbstractFdAlias.java  AbstractProcessSettings.java  AbstractProcessSettingsTest.java  File.java
java/src/main/java/com/yandex/contest/invoker/lxc/: ILXCConfig.java  ILxcConfig.java  IMountConfig.java  IRootfsConfig.java
java/src/main/java/com/yandex/contest/invoker/process/: IProcessDefaultSettings.java  IProcessResourceLimits.java  IProcessResourceUsage.java  IProcessResult.java
java/src/main/java/com/yandex/contest/invoker/process_group/: IProcessGroupDefaultSettings.java  IProcessGroupResourceLimits.java  IProcessGroupResourceUsage.java  IProcessGroupResult.java
java/src/main/java/com/yandex/contest/invoker/unistd/: IFileStatus.java  IMountEntry.java  IResourceUsage.java
java/src/main/java/yandex/contest/invoker/: IContainer.java  IContainerConfig.java  IFDAlias.java  ILog.java  IPipe.java  IProcessGroup.java  InvokerException.java  Signal.java
java/src/main/java/yandex/contest/invoker/filesystem/: ICreateFile.java  IDirectory.java  IFilesystemConfig.java  IRegularFile.java  ISymLink.java
java/src/main/java/yandex/contest/invoker/impl/: ContainerConfig.java  ContainerTest.java  ControlProcessConfig.java  FDAlias.java  File.java  IHandle.java  Log.java  PackageInit.java  Process.java  ProcessGroupTest.java  ProcessTest.java  Stream.java
java/src/main/java/yandex/contest/invoker/impl/filesystem/: Directory.java  File.java  FilesystemConfig.java  RegularFile.java  SymLink.java
java/src/main/java/yandex/contest/invoker/impl/lxc/: MountConfig.java
java/src/main/java/yandex/contest/invoker/impl/process/: ProcessDefaultSettings.java  ProcessResourceLimits.java  ProcessResourceUsage.java  ProcessResult.java
java/src/main/java/yandex/contest/invoker/impl/process_group/: ProcessGroupDefaultSettings.java  ProcessGroupResourceLimits.java  ProcessGroupResourceUsage.java
java/src/main/java/yandex/contest/invoker/jimpl/: AbstractFDAlias.java  AbstractProcessSettings.java  File.java
java/src/main/java/yandex/contest/invoker/process/: IProcessDefaultSettings.java  IProcessResourceUsage.java
java/src/main/java/yandex/contest/invoker/process_group/: IProcessGroupDefaultSettings.java  IProcessGroupResult.java
java/src/main/java/yandex/contest/invoker/unistd/: IFileStatus.java
java/src/test/com/yandex/contest/invoker/impl/: ContainerFixture.java  ContainerTest.java  InvokerFixture.java  ProcessGroupTest.java
java/src/test/yandex/contest/invoker/impl/: ContainerConfigTest.java  ContainerTest.java  LogTest.java  ProcessGroupFixture.java  ProcessGroupTest.java  ProcessTest.java
src/: CXXClass.cpp  Collection.cpp  Context.cpp  ContextJVM.cpp  ContextThread.cpp  CxxClass.cpp  NotNull.cpp  String.cpp
src/flowctl/game/impl/: Configurator.cpp
src/impl/: Container.cpp  ContainerConfig.cpp  ControlProcessConfig.cpp  FDAlias.cpp  FdAlias.cpp  File.cpp  Filesystem.cpp  Log.cpp  NotificationStream.cpp  PackageInit.cpp  Pipe.cpp  Process.cpp  ProcessGroup.cpp  Stream.cpp
src/impl/filesystem/: Config.cpp  Device.cpp  Directory.cpp  FIFO.cpp  Fifo.cpp  File.cpp  RegularFile.cpp  SymLink.cpp
src/impl/lxc/: Config.cpp  MountConfig.cpp  RootfsConfig.cpp
src/impl/process/: DefaultSettings.cpp  ResourceLimits.cpp  ResourceUsage.cpp  Result.cpp
src/impl/process_group/: DefaultSettings.cpp  ResourceLimits.cpp  ResourceUsage.cpp  Result.cpp
src/impl/unistd/: FileStatus.cpp  MountEntry.cpp
src/impl/unistd/access/: Id.cpp
(+48 files in other folders)
